# crypta

./: .bunfig.toml  .emmyrc.json  .eslintignore  .gitignore  Cargo.toml  README.md  bunfig.toml  eslint.config.js  index.html  jsrepo.json  package.json  prettierrc.mjs  react-router.config.ts  settings.json  tailwind.config.js  tsconfig.json  vite.config.js  vscode-profile-2025-03-26-04-25-23.cpuprofile  vscode-profile-2025-03-26-05-58-23.cpuprofile
.run/: dev --debug.run.xml
docs/: NodeModules.md  QuickStart.md  RafzGuide.md  Tags.md  rafz.md
src/: .env  App.css  App.js  App.jsx  emotion.d.ts  main.js  main.jsx  tailwind.config.js  theme.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  log_server.ts  main.rs  websocket_logger.rs  win_effects.rs
src/Pages/: Home.page.jsx
src/animations/: AnimatedNumber.jsx  BaseAnimationSystem.js  MorphingToggleIcon.jsx  QuickStart.jsx  README.md  animation_engine.rs  useSafeNetworkChecker.tsx
src/classes/: NavigationService.ts
src/components/: ActionButtonList.tsx
src/config/: index.tsx
src/dev/: palette.jsx  previews.jsx  useInitial.js
src/stores/: !_Notifications_!.js  _core.js  account.ts  animation.js  animation.ts  animationPresets.js  animations.fabric  animations.js  approve.ts  core.js  engine.js  errors.js  ether.js  events.js  events.ts  gpuStore.ts  gradient.js  gradientColors.js  listItemsStore.js  logger.js  parallelGradientSystem.js  root.js  router.ts  router.tsx  seconds.js  stats.js  store.context.js  store.context.jsx  svg.tsx  theme.js  (+7 more)
(+265 files in other folders)
