[package]
name = "app_react_tauri_web3"
version = "0.1.1"
description = "React Tauri Web3 App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
log = "0.4.27"
tauri = { version = "2.5.1", features = [] }
tauri-plugin-log = "2.4.0"
tungstenite = "0.26.2"
tokio-tungstenite = "0.26.0"
tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3"
url = "2.5.4"
parking_lot = "0.12.3"
lazy_static = "1.5.0"
chrono = { version = "0.4.41", features = ["serde"] }
tauri-plugin-decorum = "1.1.1"
windows = { version = "0.61.1", features = [
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Dwm",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation"
] }
